--- a/índex.html
+++ b/índex.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Meu Site no GitHub</title>
+  </head>
+  <body>
+    <h1>Bem-vindo ao Meu Site no GitHub!</h1>
+    <p>Este é um exemplo simples de site criado no GitHub.</p>
+    <p>Para saber mais sobre como criar um site no GitHub, confira a documentação oficial.</p>
+  </body>
+</html>
 
